____________________________________________________________________________
[  5849] By: autrijus                              on 2003/05/14  21:11:12
        Log: * 0.51, purely for M::I changes so it builds on 5.00503.
	   ! AutoInstall.pm
____________________________________________________________________________
[  5439] By: autrijus                              on 2003/04/22  09:54:35
        Log: * cpan::config was loaded too late. thanks for david.
	   ! AUTHORS AutoInstall.pm
____________________________________________________________________________
[  4936] By: autrijus                              on 2003/03/25  16:54:39
        Log: * changes and signatures.
	   ! Changes SIGNATURE
____________________________________________________________________________
[  4935] By: autrijus                              on 2003/03/25  16:53:40
        Log: * changes and signatures.
	   ! Changes META.yml SIGNATURE
____________________________________________________________________________
[  4934] By: autrijus                              on 2003/03/25  16:52:18
        Log: * This be 0.50.
             * fixed a bug with 'make installdeps' not respecting sudo.
	   ! AutoInstall.pm
____________________________________________________________________________
[  4905] By: autrijus                              on 2003/03/23  19:39:17
        Log: * now asks the user before we jump thru sudo.
	   ! AutoInstall.pm
____________________________________________________________________________
[  4887] By: autrijus                              on 2003/03/23  00:10:11
        Log: * we'll ship META.yml next time around, i promise!
	   + META.yml
	   ! MANIFEST Makefile.PL
____________________________________________________________________________
[  4886] By: autrijus                              on 2003/03/22  23:50:51
        Log: * changes and signatures.
	   ! Changes SIGNATURE
____________________________________________________________________________