@@ -7,8 +7,6 @@ Makefile.PL
 README
 SIGNATURE
 TODO
-t/0-signature.t
-t/AutoInstall.t
 inc/Module/Install.pm
 inc/Module/Install/AutoInstall.pm
 inc/Module/Install/Base.pm
@@ -17,3 +15,5 @@ inc/Module/Install/Fetch.pm
 inc/Module/Install/Makefile.pm
 inc/Module/Install/Metadata.pm
 inc/Module/Install/Win32.pm
+t/0-signature.t
+t/AutoInstall.t
