@@ -1,5 +1,5 @@
 name: ExtUtils::AutoInstall
-version: 0.51
+version: 0.52
 abstract: Automatic install of dependencies via CPAN
 author: Autrijus Tang (autrijus@autrius.org)
 distribution_type: module
